# NMRC-practicals-2025

./: .gitignore  0_getting_started.ipynb  1_single_neuron.ipynb  1_single_neuron_answers.ipynb  2_neurons_as_logic_gates_answers.ipynb  3_training_a_perceptron.ipynb  3_training_a_perceptron_answers.ipynb  4_training_neural_networks.ipynb  4_training_neural_networks_answers.ipynb  5_reinforcement_learning_answers.ipynb  6_the_hopfield_network_answers.ipynb  README.md  enviornment_nmrc2025.yml  mac_nmrc2025.yml  pyproject.toml  utils_assignment_3.py  windows_nmrc2025_fix.yml
