[project]
name = "nmrc-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "andreas",email = "a.w.franzke@uva.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.5,<8.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "keras (>=3.11.2,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
